# Dev_projet_LLM

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: test-docker.yaml
api/: main.py
api/core/: config.py
api/db/: models.py  session.py
api/routes/: router.py
api/schemas/: interview.py
api/services/: interview_service.py
backend/: test_llm.py
backend/llm/: chains.py  client.py  prompts.py  schemas.py
database/: init_db.sql
ui/interviewai-vite/: Dockerfile  default.conf  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
ui/interviewai-vite/src/: App.jsx  index.css
ui/interviewai-vite/src/api/: client.ts
ui/interviewai-vite/src/components/: Header.jsx  Sidebar.jsx
ui/interviewai-vite/src/components/analytics/: EmptyState.jsx  GrowthBanner.jsx  InterviewHistoryTable.jsx  MissedKeywordsCard.jsx  ScoreTrendCard.jsx  SkillBalanceCard.jsx  StatSummaryCard.jsx  SummaryStatsGrid.jsx
ui/interviewai-vite/src/components/chat/: AnalysisSidebar.jsx  ChatHeader.jsx  ChatInput.jsx  ChatMessageList.jsx  ChatTopBar.jsx  InterviewTipCard.jsx  LiveAnalysisPanel.jsx  MessageBubble.jsx  (+2 more)
ui/interviewai-vite/src/hooks/: useFeedbackReport.js  useInterviewSession.js  useScheduledSimulations.js  useStartInterview.js
ui/interviewai-vite/src/layouts/: AppLayout.jsx  ChatLayout.jsx
ui/interviewai-vite/src/pages/: AnalyticsPage.jsx  ChatPage.jsx  DashboardPage.jsx  FeedbackPage.jsx  InterviewsPage.jsx  SettingsPage.jsx
ui/interviewai-vite/src/types/: analysis.ts  history.ts  question.ts  resultResponse.ts  session.ts
(+25 files in other folders)
